# cardano-golang-signing-module

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build-check.sh  build_manual.sh  build_prebuilt.sh  build_rust.sh  doc.go  go.mod  signer.go  signer_test.go  switch_to_manual_build.sh  switch_to_prebuilt.sh
.cargo/: config.toml
examples/: example_mnemonic.go
include/: signer.h
prebuilt/darwin_amd64/: libsigner_go.dylib
prebuilt/darwin_arm64/: libsigner_go.dylib
signing_module/: .gitignore
signing_module/src/: setup.py
src/: c_interface.rs  lib.rs
